--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -141,7 +141,9 @@
     <ClCompile Include="src\graphics\shader.cpp" />
     <ClCompile Include="src\graphics\Window.cpp" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\utils\FileUtils.cpp" />
     <ClCompile Include="src\utils\Time.cpp" />
+    <ClCompile Include="src\utils\Timer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="src\shaders\basic.frag" />
