--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -148,6 +148,7 @@
   <ItemGroup>
     <None Include="src\shaders\basic.frag" />
     <None Include="src\shaders\basic.vert" />
+    <None Include="src\shaders\lightCube.frag" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\awesomeface.png" />
