--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -69,5 +69,8 @@
     <Image Include="res\container.jpg">
       <Filter>资源文件</Filter>
     </Image>
+    <Image Include="res\container2.png">
+      <Filter>资源文件</Filter>
+    </Image>
   </ItemGroup>
 </Project>
