--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -72,5 +72,8 @@
     <Image Include="res\container2.png">
       <Filter>资源文件</Filter>
     </Image>
+    <Image Include="res\container2_specular.png">
+      <Filter>资源文件</Filter>
+    </Image>
   </ItemGroup>
 </Project>
