--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="src\utils\Time.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="src\utils\Logger.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\graphics\shader.cpp">
@@ -54,6 +57,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="src\utils\Timer.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="src\utils\Logger.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
