--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -156,6 +156,7 @@
     <Image Include="res\awesomeface.png" />
     <Image Include="res\container.jpg" />
     <Image Include="res\container2.png" />
+    <Image Include="res\container2_emission.png" />
     <Image Include="res\container2_specular.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
