--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -64,11 +64,9 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="src\shaders\directionalLight.frag" />
     <None Include="src\shaders\basic.vert" />
     <None Include="src\shaders\lightCube.frag" />
-    <None Include="src\shaders\pointlight.frag" />
-    <None Include="src\shaders\spotlight.frag" />
+    <None Include="src\shaders\multipleLight.frag" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\awesomeface.png">
