--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -131,7 +131,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="src\shaders\basic.vert" />
-    <None Include="src\shaders\lightCube.frag" />
+    <None Include="src\shaders\basic.frag" />
     <None Include="src\shaders\multipleLight.frag" />
     <None Include="src\shaders\terrain.frag" />
   </ItemGroup>
