--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -178,6 +178,8 @@
   <ItemGroup>
     <None Include="src\shaders\basic.vert" />
     <None Include="src\shaders\basic.frag" />
+    <None Include="src\shaders\framebufferColorBuffer.frag" />
+    <None Include="src\shaders\framebufferColorBuffer.vert" />
     <None Include="src\shaders\model.frag" />
     <None Include="src\shaders\terrain.frag" />
   </ItemGroup>
