--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -146,6 +146,8 @@
     <None Include="src\shaders\basic.frag" />
     <None Include="src\shaders\model.frag" />
     <None Include="src\shaders\terrain.frag" />
+    <None Include="src\shaders\framebufferColorBuffer.frag" />
+    <None Include="src\shaders\framebufferColorBuffer.vert" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\awesomeface.png">
