--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -183,6 +183,8 @@
     <None Include="src\shaders\framebufferColorBuffer.frag" />
     <None Include="src\shaders\framebufferColorBuffer.vert" />
     <None Include="src\shaders\model.frag" />
+    <None Include="src\shaders\modelReflection.frag" />
+    <None Include="src\shaders\modelRefraciton.frag" />
     <None Include="src\shaders\skybox.frag" />
     <None Include="src\shaders\skybox.vert" />
     <None Include="src\shaders\terrain.frag" />
