--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -156,6 +156,8 @@
     <None Include="src\shaders\framebufferColorBuffer.vert" />
     <None Include="src\shaders\skybox.frag" />
     <None Include="src\shaders\skybox.vert" />
+    <None Include="src\shaders\modelRefraciton.frag" />
+    <None Include="src\shaders\modelReflection.frag" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\awesomeface.png">
