各向异性过滤，Camra重命名

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -144,7 +144,7 @@
     <ClInclude Include="src\graphics\Mesh.h" />
     <ClInclude Include="dependencies\stb_image.h" />
     <ClInclude Include="src\utils\Logger.h" />
-    <ClInclude Include="src\graphics\camera\FPSCamera.h" />
+    <ClInclude Include="src\graphics\camera\Camera.h" />
     <ClInclude Include="src\graphics\shader.h" />
     <ClInclude Include="src\graphics\Window.h" />
     <ClInclude Include="src\utils\FileUtils.h" />
@@ -167,7 +167,7 @@
     <ClCompile Include="src\graphics\Model.cpp" />
     <ClCompile Include="src\graphics\Mesh.cpp" />
     <ClCompile Include="src\utils\Logger.cpp" />
-    <ClCompile Include="src\graphics\camera\FPSCamera.cpp" />
+    <ClCompile Include="src\graphics\camera\Camera.cpp" />
     <ClCompile Include="src\graphics\shader.cpp" />
     <ClCompile Include="src\graphics\Window.cpp" />
     <ClCompile Include="src\main.cpp" />
