--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -75,7 +75,7 @@
     <ClInclude Include="src\graphics\MeshFactory.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="src\platform\OpenGL\Framebuffer.h">
+    <ClInclude Include="src\platform\OpenGL\Framebuffers\Framebuffer.h">
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="src\graphics\Skybox.h">
@@ -97,6 +97,12 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="src\graphics\dynamic lights\DynamicLightManager.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="src\graphics\Material.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="src\platform\OpenGL\Framebuffers\ShadowMap.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
@@ -158,7 +164,7 @@
     <ClCompile Include="src\graphics\MeshFactory.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="src\platform\OpenGL\Framebuffer.cpp">
+    <ClCompile Include="src\platform\OpenGL\Framebuffers\Framebuffer.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="src\graphics\Skybox.cpp">
@@ -179,6 +185,12 @@
     <ClCompile Include="src\graphics\dynamic lights\DynamicLightManager.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="src\graphics\Material.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="src\platform\OpenGL\Framebuffers\ShadowMap.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="src\shaders\basic.vert" />
@@ -191,6 +203,8 @@
     <None Include="src\shaders\skybox.vert" />
     <None Include="src\shaders\modelRefraciton.frag" />
     <None Include="src\shaders\modelReflection.frag" />
+    <None Include="src\shaders\shadowmap.vert" />
+    <None Include="src\shaders\shadowmap.frag" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\awesomeface.png">
