--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -36,10 +36,10 @@
     <ClInclude Include="src\utils\Logger.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="src\graphics\Mesh.h">
+    <ClInclude Include="src\graphics\mesh\Mesh.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="src\graphics\Model.h">
+    <ClInclude Include="src\graphics\mesh\Model.h">
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="dependencies\stb_image.h">
@@ -72,7 +72,7 @@
     <ClInclude Include="src\graphics\renderer\Renderer.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="src\graphics\MeshFactory.h">
+    <ClInclude Include="src\graphics\mesh\MeshFactory.h">
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="src\platform\OpenGL\Framebuffers\Framebuffer.h">
@@ -99,13 +99,19 @@
     <ClInclude Include="src\graphics\dynamic lights\DynamicLightManager.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="src\graphics\Material.h">
+    <ClInclude Include="src\graphics\mesh\Material.h">
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="src\platform\OpenGL\Framebuffers\ShadowMap.h">
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="src\graphics\renderer\GLCache.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="src\graphics\mesh\MeshLoader.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="src\graphics\renderer\PostProcessor.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
@@ -134,10 +140,10 @@
     <ClCompile Include="src\utils\Logger.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="src\graphics\Mesh.cpp">
+    <ClCompile Include="src\graphics\mesh\Mesh.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="src\graphics\Model.cpp">
+    <ClCompile Include="src\graphics\mesh\Model.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="src\terrain\Terrain.cpp">
@@ -164,7 +170,7 @@
     <ClCompile Include="src\graphics\renderer\Renderer.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="src\graphics\MeshFactory.cpp">
+    <ClCompile Include="src\graphics\mesh\MeshFactory.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="src\platform\OpenGL\Framebuffers\Framebuffer.cpp">
@@ -188,7 +194,7 @@
     <ClCompile Include="src\graphics\dynamic lights\DynamicLightManager.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="src\graphics\Material.cpp">
+    <ClCompile Include="src\graphics\mesh\Material.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="src\platform\OpenGL\Framebuffers\ShadowMap.cpp">
@@ -197,14 +203,17 @@
     <ClCompile Include="src\graphics\renderer\GLCache.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="src\graphics\renderer\PostProcessor.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="src\shaders\basic.vert" />
     <None Include="src\shaders\basic.frag" />
     <None Include="src\shaders\model.frag" />
     <None Include="src\shaders\terrain.frag" />
-    <None Include="src\shaders\framebuffer.frag" />
-    <None Include="src\shaders\framebuffer.vert" />
+    <None Include="src\shaders\postprocess.frag" />
+    <None Include="src\shaders\postprocess.vert" />
     <None Include="src\shaders\skybox.frag" />
     <None Include="src\shaders\skybox.vert" />
     <None Include="src\shaders\modelRefraciton.frag" />
